# uv_mailchimp

./: README.md  meta_update.py  mp_extract_copy.py  pyproject.toml
